# waylauncher

./: Cargo.toml  README.md  build.rs
src/: config.rs  keys.rs  main.rs  search.rs  ui.rs
src/entries/: desktop.rs  mod.rs
src/resources/: resources.gresource.xml  style.css  window.ui
