[package]
name = "waylauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
fuzzy-matcher = "0.3.7"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
gtk4-layer-shell = "0.4.0"
rust-ini = "0.21.1"
serde = "1.0.206"
serde_derive = "1.0.206"
toml = "0.8.19"

[build-dependencies]
glib-build-tools = "0.20.0"

[[bin]]
name = "waylauncer"
path = "src/main.rs"
